2012-02-16 Borut Razem <borut.razem AT gmail.com>

	* .sdcc_builder/profile:
	  added /opt/local/bin to path for Darwin i386

2012-01-08 Borut Razem <borut.razem AT gmail.com>

	* etc/dcf_list, crontab.txt:
	  added Mac OS X i386 on dhcp101 DFC build machine
	* packages/build.gputils/Makefile: upgraded to gputils-0.14.1

2012-01-06 Borut Razem <borut.razem AT gmail.com>

	* packages/build.bison, packages/build.bison/download,
	  packages/build.bison/Makefile: added
	* packages/build.automake/Makefile, packages/build.autoconf/Makefile:
          updated versions: automake-1.11.2, autoconf-2.68

2012-01-05 Borut Razem <borut.razem AT gmail.com>

	* packages/build.readline/Makefile, packages/build.ncurses/Makefile,
	  packages/packages.mk: introduced XCODE_ROOT

2011-10-29 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gputils/Makefile: upgraded to gputils-0.14.0
	* crontab.txt, packages/build.gettext/Makefile,
	  packages/build.mingw32/Makefile, packages/build.gcc/Makefile,
	  packages/build.wine/Makefile: changes

2011-08-27 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gmp_mpfr/Makefile: updated to mpfr 3.0.1, mpc 0.9
	* packages/build.gcc/Makefile: updated to gcc 4.6.1

2011-08-15 Borut Razem <borut.razem AT gmail.com>

	* packages/build.wine/Makefile:
	  added --without-x --without-freetype configure options

2011-08-14 Borut Razem <borut.razem AT gmail.com>

	* packages/build.dos2unix/*: added
	* etc/dcf_list: added derna DFC build machine
	* bin/dcf.sh: bandwith limit increase from 7 to KiB/s
	* crontab.txt: mirror-doors build starts at 01:00; all entries commented
	* packages/build.popt/Makefile, packages/build.scons/Makefile,
	  packages/build.libtool/Makefile, packages/build.nsis/Makefile:
	  miscellaneous cosmetic changes
	* packages/build.gettext/*: added
	* .sdcc_builder/profile: serach for local unix2dos
	* packages/build.wine/*: added

2011-07-31 Borut Razem <borut.razem AT gmail.com>
