@@ -1,3 +1,7 @@
+2012-02-26 Borut Razem <borut.razem AT gmail.com>
+
+	* packages/build.flex/*: added
+
 2012-02-16 Borut Razem <borut.razem AT gmail.com>
 
 	* .sdcc_builder/profile:
